<resources>
    <string name="app_name">PayUTC</string>
    <string name="payutc">PayUTC</string>
    <string name="nemopay">Nemopay</string>
    <string name="ginger">Ginger</string>
    <string name="bottomatik">Bottomatik</string>
    <string name="hello">Pour se connecter, clique sur\n le bouton ou scanne ton badge</string>
    <string name="ok">Ok</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="none">Aucun</string>
    <string name="connect">Se connecter</string>
    <string name="connection">Connexion</string>
    <string name="register">Enregistrer</string>
    <string name="applicate">Appliquer</string>
    <string name="reload">Recharger</string>
    <string name="activate">Activer</string>
    <string name="pass">Continuer</string>
    <string name="erase">Effacer</string>
    <string name="cancel">Annuler</string>
    <string name="add">Ajouter</string>
    <string name="more">En savoir plus</string>
    <string name="do_nothing">Ne rien faire</string>
    <string name="quit">Quitter</string>
    <string name="app_registred">Appareil enregistré</string>
    <string name="app_not_registred">Appareil non enregistré</string>
    <string name="app_not_connected">Appareil non connectée</string>
    <string name="username_dialog">Connexion par CAS</string>
    <string name="badge_dialog">Connexion par badge</string>
    <string name="username">Login</string>
    <string name="password">Mot de passe</string>
    <string name="pin">Code PIN</string>
    <string name="no_pin">Aucun PIN</string>
    <string name="pin_required">Code PIN requis !</string>
    <string name="price_required">Prix requis !</string>
    <string name="username_and_password_required">Login CAS et mot de passe requis !</string>
    <string name="sell">Vente</string>
    <string name="article">Article</string>
    <string name="validate">Valider</string>
    <string name="panier">Panier</string>
    <string name="service">Le service</string>
    <string name="realized">Réalisé à</string>
    <string name="realized_by_other">Réalisé par une autre fondation</string>
    <string name="paiement">Paiement</string>
    <string name="configurate">Configurer</string>
    <string name="configurate_by_default">Configurer par défaut</string>
    <string name="configuration">Configuration</string>
    <string name="keyboard">Clavier</string>
    <string name="category">Catégorie</string>
    <string name="grid">Grille</string>
    <string name="list">Liste</string>
    <string name="foundations">Fondations</string>
    <string name="options">Options</string>
    <string name="user_id">ID utilisateur</string>
    <string name="firstname">Prenom</string>
    <string name="lastname">Nom</string>
    <string name="name">Nom</string>
    <string name="image">Image</string>
    <string name="email">Email</string>
    <string name="adult">Adulte</string>
    <string name="contribute">Cotiser</string>
    <string name="cotisant">Cotisant</string>
    <string name="solde">Solde</string>
    <string name="tag_id">ID tag</string>
    <string name="tag">Numéro de badge</string>
    <string name="short_tag">Numéro du tag</string>
    <string name="info">Information</string>
    <string name="type">Type</string>
    <string name="day_s_">jour(s)</string>
    <string name="update">Mise à jour</string>
    <string name="download">Téléchargement</string>
    <string name="qrcode">QR Code</string>
    <string name="credit">Crédits</string>
    <string name="price">Prix</string>
    <string name="seance">Séance</string>
    <string name="print">Affichage</string>
    <string name="pay">Payer</string>
    <string name="author">&lt;/&gt; avec ♥ par Samy NASTUZZI</string>
    <string name="error_unexpected">Une erreur improbable a eu lieu</string>
    <string name="error_view">Une erreur a empêché la création de la vue</string>
    <string name="nfc_not_available">NFC non disponible</string>
    <string name="nfc_not_enabled">NFC non activé</string>
    <string name="nfc_availability">L\'application nécessite que le NFC soit disponible sur le téléphone pour que celle-ci fonctionne correctement. Elle ne pourra donc être utilisée sur ce téléphone</string>
    <string name="nfc_accessibility">L\'application nécessite que le NFC soit activé pour fonctionner correctement</string>
    <string name="internet_not_available">L\'appareil n\'est pas connecté à internet</string>
    <string name="internet_accessibility">L\'application nécessite d\'être connecté à internet pour fonctionner correctement.</string>
    <string name="cas_connection">Connexion via CAS</string>
    <string name="cas_in_url">Récupération du lien CAS</string>
    <string name="cas_in_connection">Connexion au CAS</string>
    <string name="cas_in_service_adding">Ajout du service au CAS</string>
    <string name="cas_in_service_connection">Connexion au service via le CAS</string>
    <string name="cas_error_url">Impossible de joindre le CAS</string>
    <string name="cas_error_connection">Login et/ou mot de passe non reconnu par le CAS</string>
    <string name="cas_error_service_adding">Une erreur a été détectée lors de l\'ajout du service</string>
    <string name="cas_error_service_connection">Erreur lors de la connexion au service depuis le CAS</string>
    <string name="cas_error_service_linking">Erreur lors de la connexion entre le CAS et le service</string>
    <string name="badge_connection">Connexion par badge</string>
    <string name="badge_read">Lecture d\'un badge</string>
    <string name="badge_waiting">En attente de lecture d\'un badge</string>
    <string name="badge_app_not_registered">Il est nécessaire que l\'application soit enregistrée pour permettre la connexion via badge</string>
    <string name="badge_recognization">Authentification du badge</string>
    <string name="badge_error_no_rights">Impossible de vérifier le badge</string>
    <string name="badge_pin_error_not_recognized">Badge ou code PIN non reconnu</string>
    <string name="badge_error_not_recognized">Badge non reconnu (compte PayUTC peut-être non existant)</string>
    <string name="badge_pin_not_initialized">Pour pouvoir se connecter via son badge, il est impératif d\'avoir configuré son code PIN sur https://pay.utc.fr/</string>
    <string name="session_null">La session n\'a pas été correctement initialisé. Il est nécessaire de se reconnecter</string>
    <string name="nemopay_connection">Connexion à Nemopay</string>
    <string name="nemopay_connection_verification">Vérification de la connexion à Nemopay</string>
    <string name="nemopay_no_longer_connected">Application déconnectée. Nécessité de se reconnecter</string>
    <string name="nemopay_authentification">Authentification de l\'application</string>
    <string name="nemopay_registering">Enregistrement de l\'application</string>
    <string name="nemopay_already_registered">Application déjà authentifiée</string>
    <string name="nemopay_error_registering">Application non enregistrée</string>
    <string name="nemopay_information">Informations de la part de Nemopay</string>
    <string name="ginger_registering">Enregistrement de l\'application</string>
    <string name="ginger_error_registering">Clé Ginger incorrecte</string>
    <string name="no_api">Aucune API configurée</string>
    <string name="api_name">Nom d\'application</string>
    <string name="api_url">Url de l\'application</string>
    <string name="api_not_recognized">API non reconnue</string>
    <string name="api_no_data">L\'API n\'a envoyé aucune information</string>
    <string name="api_execution">Exécution de la commande API</string>
    <string name="api_pay_caution">Attention, la commande \"%s\" fera payer la personne des articles affichés</string>
    <string name="api_assign">Assigner cette API</string>
    <string name="key">Clé d\'application</string>
    <string name="key_registration">Enregistrement d\'une clé</string>
    <string name="key_explication">Pour pouvoir fonctionner, l\'application a besoin d\'être enregistrée sous un nom précis et daté (date automatiquement ajoutée si non détectée). Ceci permettra par la suite de donner des droits à cet appareil</string>
    <string name="key_name">Nom - Date</string>
    <string name="key_description">Description</string>
    <string name="key_name_required">Nom requis !</string>
    <string name="key_add_explication">Il est possible de modifier directement une clé d\'application si celle-ci est connue</string>
    <string name="key_remove_temp">L\'application a été désauthentifiée temporairement. Il suffit de relancer l\'application pour qu\'elle soit de nouveau connectée</string>
    <string name="already_connected">Déjà connecté sous</string>
    <string name="information_collection">Récupération d\'informations</string>
    <string name="foundation_list_collecting">Récupération de la liste des fondations</string>
    <string name="location_list_collecting">Récupération des lieux de ventes</string>
    <string name="keyboard_list_collecting">Récupération des claviers de caisse</string>
    <string name="category_list_collecting">Récupération des catégories</string>
    <string name="article_list_collecting">Récupération des articles</string>
    <string name="location_error_0">n\'a aucun lieu de vente</string>
    <string name="keyboard_error_0">n\'a aucun clavier de caisse</string>
    <string name="category_error_0">n\'a aucune catégorie</string>
    <string name="article_error_0">n\'a aucun article à vendre</string>
    <string name="article_not_available">Des articles ne sont plus disponibles à l\'achat</string>
    <string name="buyer_info_collecting">Récupération des informations de la personne</string>
    <string name="user_searching">Identification de la personne</string>
    <string name="user_nemopay_info_collecting">Identification de la personne auprès de Nemopay</string>
    <string name="user_ginger_info_collecting">Identification de la personne auprès de Ginger</string>
    <string name="user_not_recognized">Personne non reconnue</string>
    <string name="user_rights_list_collecting">Récupération des droits de la personne</string>
    <string name="user_error_collecting">Impossible de récupérer les infos de la personne</string>
    <string name="no_purchases">Aucun article acheté dernièrement</string>
    <string name="transaction_in_progress">Transaction en cours</string>
    <string name="cancel_transaction">Annuler une transaction</string>
    <string name="ask_cancel_transaction">Annuler la transaction suivante:</string>
    <string name="transaction_canceled">L\'annulation a bien été effective</string>
    <string name="no_longer_connected">L\'application nécessite d\'être reconnectée. Appuyer sur ok pour relancer l\'application</string>
    <string name="location_choice">Choisir un lieu de vente</string>
    <string name="option_list">Liste des options à afficher</string>
    <string name="category_0_selected">Aucune catégorie n\'a été sélectionnée</string>
    <string name="app_configurated">L\'application a été configurée par défaut sur ce mode d\'affichage. Seul une personne possédant les droits peut reconfigurer l\'application par défaut</string>
    <string name="read_card_information">Informations de la carte</string>
    <string name="ginger_information">Informations de la part de Ginger</string>
    <string name="contribute_choice">Type de cotisation</string>
    <string name="contribute_student">Etudiant (20€)</string>
    <string name="contribute_ext">Extérieur (20€)</string>
    <string name="contribute_admin">Membre d\'honneur (0€)</string>
    <string name="contribute_temp">Temporaire</string>
    <string name="article_name">Nom de l\'article</string>
    <string name="print_mode">Mode d\'affichage</string>
    <string name="filters">Filtres d\'affichage</string>
    <string name="print_cotisant">Afficher le filtre cotisant</string>
    <string name="print_18">Afficher le filtre majeur</string>
</resources>