<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:text="@string/lastname" />

        <TextView
            android:id="@+id/text_name"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:text="@string/seance" />

        <TextView
            android:id="@+id/text_seance"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:text="@string/type" />

        <TextView
            android:id="@+id/text_price"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>